# ks-ssr

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README-en.md  README.en.md  README.md  config.h.in  gen_rs.sh  sse-config.h.in  ssr-config.h.in
config/: CMakeLists.txt  ks-br-config.sh  ks-ssr-config.sh  ks-ssr-daemon.sh
data/: CMakeLists.txt  br-categories.ini.in  br-custom-ra.xml  br-iptables.rules  br-protocol.xsd  br-sshd-sftp.pp  br-system-rs.xml.in  com.kylinsec.Kiran.SSE.conf  com.kylinsec.Kiran.SSE.service.in  com.kylinsec.Kiran.SSR.conf  com.kylinsec.Kiran.SSR.service.in  com.kylinsec.SC.BoxManager.xml  com.kylinsec.SC.DeviceManager.xml  com.kylinsec.SC.ExecutionControl.xml  com.kylinsec.SC.FileProtected.xml  com.kylinsec.SC.KSS.xml  com.kylinsec.SC.KernelProtected.xml  com.kylinsec.SC.License.xml  com.kylinsec.SC.SSR.xml  com.kylinsec.SC.SecurityBox.Box.xml  com.kylinsec.SC.SecurityBox.xml  com.kylinsec.SC.Trusted.xml  com.kylinsec.SC.TrustedProtected.xml  com.kylinsec.SC.conf  com.kylinsec.SC.policy.in  com.kylinsec.SC.service.in  com.kylinsec.SSR.Account.xml  com.kylinsec.SSR.BR.xml  com.kylinsec.SSR.BoxManager.xml  com.kylinsec.SSR.Log.xml  com.kylinsec.SSR.SSR.xml  com.kylinsec.SSR.SecurityBox.xml  com.kylinsec.SSR.ToolBox.xml  com.kylinsec.SSR.policy.in  com.kylinsec.SSR.service.in  device-config.ini  device-connect-record.ini  device-interface-config.ini  kiran-sse-daemon.service.in  kiran-ssr-daemon.pc.in  (+29 more)
data/dbus/: com.kylinsec.SSR.Account.xml  com.kylinsec.SSR.BR.xml  com.kylinsec.SSR.DeviceManager.xml  com.kylinsec.SSR.KSS.xml  com.kylinsec.SSR.Log.xml  com.kylinsec.SSR.PrivateBox.xml  com.kylinsec.SSR.ToolBox.xml  com.kylinsec.SSR.conf  com.kylinsec.SSR.xml
data/services/: com.kylinsec.SSR.service.in  ks-ssr-daemon.service.in
lib/base/: CMakeLists.txt  base.h  crypto-helper.cpp  crypto-helper.h  database.cpp  database.h  def.h  error.cpp  error.h  file-lock.cpp  file-lock.h  file-utils.cpp  file-utils.h  glib2-utils.cpp  glib2-utils.h  log.cpp  log.h  misc-utils.cpp  misc-utils.h  notification-wrapper.cpp  notification-wrapper.h  stl-helper.h  str-utils.cpp  str-utils.h  thread-pool.cpp  thread-pool.h
lib/config/: CMakeLists.txt  config-pam.cpp  config-pam.h  config-plain.cpp  config-plain.h
lib/dbus/: CMakeLists.txt  dbus-proxy-systemd.cpp  dbus-proxy-systemd.h  dbus-systemd-proxy.cpp  dbus-systemd-proxy.h
lib/license/: CMakeLists.txt  license-proxy.cpp  license-proxy.h
plugins/cpp/audit/: CMakeLists.txt  audit-plugin.cpp  audit-plugin.h  audit-reinforcement-manager.cpp  audit-reinforcement-manager.h  br-plugin-audit.xml.in  reinforcement-manager.cpp  reinforcement-manager.h  ssr-plugin-audit.xml.in
plugins/cpp/config/: CMakeLists.txt  config-plugin.cpp  config-plugin.h  cr-manager.cpp  cr-manager.h
plugins/cpp/network/: CMakeLists.txt  br-plugin-network.xml.in  network-plugin.cpp  network-plugin.h  network-reinforcement-manager.cpp  network-reinforcement-manager.h  reinforcement-manager.cpp  reinforcement-manager.h  ssr-plugin-network.ini.in  ssr-plugin-network.xml.in
plugins/python/: CMakeLists.txt  br-plugin-audit.xml.in  br-plugin-config.xml.in  br-plugin-external.xml.in  br-plugin-network.xml.in  ssr-plugin-audit.xml.in  ssr-plugin-config.xml.in  ssr-plugin-external.xml.in  ssr-plugin-network.xml.in
plugins/python/br/: configuration.py  log.py  systemd.py  translation.py.in  utils.py  vars.py.in
plugins/python/network/: CMakeLists.txt  __init__.py  ssr-plugin-network.xml.in  test.py
plugins/python/ssr/: config.py  configuration.py  log.py  systemd.py  utils.py  vars.py.in
po/: CMakeLists.txt  POTFILES.in  zh_CN.po
src/daemon/: CMakeLists.txt  categories.cpp  categories.h  com.kylinsec.Kiran.LicenseManager.xml  com.kylinsec.Kiran.LicenseObject.xml  com.kylinsec.Kiran.SSE.xml  com.kylinsec.Kiran.SSR.xml  com.kylinsec.SSR.xml  configuration.cpp  configuration.h  daemon-manager.cpp  daemon-manager.h  daemon.cpp  daemon.h  dbus.cpp  dbus.h  job.cpp  job.h  main.cpp  manager.cpp  manager.h  plugin-loader.cpp  plugin-loader.h  plugin-python.cpp  plugin-python.h  plugin.cpp  plugin.h  plugins.cpp  plugins.h  reinforcement.cpp  reinforcement.h  resource-monitor.cpp  resource-monitor.h  rule.cpp  rule.h  sse-categories.cpp  sse-configuration.cpp  sse-configuration.h  sse-job.cpp  sse-job.h  (+39 more)
src/daemon/account/: manager.cpp  manager.h
src/daemon/box/: box-dao.cpp  box-dao.h  box-manager.cpp  box-manager.h  box.cpp  box.h  ecryptfs.cpp  ecryptfs.h
src/daemon/br/: br-dbus.cpp  br-dbus.h  categories.cpp  categories.h  configuration.cpp  configuration.h  job.cpp  job.h  plugin-loader.cpp  plugin-loader.h  plugin.cpp  plugin.h  plugins.cpp  plugins.h  reinforcement.cpp  reinforcement.h  resource-monitor.cpp  resource-monitor.h  rule.cpp  rule.h  utils.cpp  utils.h
src/daemon/common/: auth-manager.cpp  auth-manager.h  dbus-helper.h  kss-init.cpp  kss-init.h  kss.cpp  kss.h  polkit-proxy.cpp  polkit-proxy.h  systemd-proxy.cpp  systemd-proxy.h
src/daemon/device/: device-configuration.cpp  device-configuration.h  device-dbus.cpp  device-dbus.h  device-factory.cpp  device-factory.h  device-interface.cpp  device-interface.h  device-log.cpp  device-log.h  device-manager.cpp  device-manager.h  device-mount-monitor.cpp  device-mount-monitor.h  device-rule-manager.cpp  device-rule-manager.h  device-rule.cpp  device-rule.h  device.cpp  device.h  drm-device.cpp  drm-device.h  record.cpp  record.h  sd-device-enumerator.cpp  sd-device-enumerator.h  sd-device-monitor.cpp  sd-device-monitor.h  sd-device.cpp  sd-device.h  udev-rule-manager.cpp  udev-rule-manager.h  usb-device.cpp  (+3 more)
src/notify/: CMakeLists.txt  main.cpp  notify.cpp  notify.h
src/tool/: CMakeLists.txt  main.cpp  sse-cmd-parser.cpp  sse-cmd-parser.h  ssr-cmd-parser.cpp
src/ui/: CMakeLists.txt  about.cpp  about.h  about.ui  execution-control.ui  main.cpp  navigation.cpp  navigation.h  sidebar.cpp  sidebar.h  trusted.ui  window.cpp  window.h  window.ui
test/: CMakeLists.txt  main.cpp  test-config.cpp  test-crypto.cpp
test/crypto/: test-crypto.cpp
(+722 files in other folders)
