install(
  FILES "${CMAKE_CURRENT_SOURCE_DIR}/ks-br-config.sh"
  RENAME "ks-br-config"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
              WORLD_READ
  DESTINATION /usr/bin/)

install(
  FILES "${CMAKE_CURRENT_SOURCE_DIR}/ks-ssr-daemon.sh"
  RENAME "ks-ssr-daemon"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
              WORLD_READ
  DESTINATION /usr/bin/)
